# flora-api

./: .dockerignore  .env  .env.sample  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml
.github/workflows/: build-deploy.yml
helm-chart/flora-api/: Chart.yaml  values.yaml
helm-chart/flora-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
manifests/: deployment.yml  service.yml
src/: client.rs  config.rs  main.rs
src/db/: clients.rs  errors.rs  flows.rs  mod.rs
src/http/: clients.rs  errors.rs  flows.rs  metrics.rs  mod.rs  ping.rs
src/models/: client.rs  error.rs  flow.rs  mod.rs
