[package]
name = "flora-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
bson = "2.7.0"
clap = { version = "4.4.8", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.29"
mongodb = "2.7.1"
opentelemetry = "0.21.0"
opentelemetry-prometheus = "0.14.1"
opentelemetry_sdk = "0.21.1"
prometheus = "0.13.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-loki = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.4.1"
